# homelab-bot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.json  jrit.toml
src/: config.rs  db.rs  dedup.rs  heartbeat.rs  main.rs  queue.rs  router.rs  startup.rs  stats.rs  supervisor.rs  worker.rs
src/modules/: mod.rs
src/modules/http_notifications_server/: mod.rs  server.rs
src/modules/quick_notes/: format.rs  handler.rs  mod.rs  rich_client.rs
