[package]
name = "homelab-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", default-features = false, features = ["rustls", "macros", "ctrlc_handler"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
axum = { version = "0.7", features = ["multipart"] }
tower-http = { version = "0.5", features = ["trace"] }
self_update = { version = "1.0.0-rc.1", default-features = false, features = ["reqwest", "rustls", "archive-tar", "compression-flate2"] }
