[package]
name = "homelab-bot"
version = "0.3.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
anyhow = "1"
serde_json = "1"
tracing = "0.1"
futures = "0.3"

[dependencies.teloxide]
version = "0.17"
default-features = false
features = [
    "rustls",
    "macros",
    "ctrlc_handler",
]

[dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.axum]
version = "0.7"
features = ["multipart"]

[dependencies.tower-http]
version = "0.5"
features = ["trace"]

[dependencies.self_update]
version = "1.0.0-rc.1"
default-features = false
features = [
    "reqwest",
    "archive-tar",
    "compression-flate2",
]

[dependencies.rustls]
version = "0.23"
default-features = false
features = [
    "ring",
    "tls12",
]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "rustls-no-provider",
    "webpki-roots",
]
